test/Fail/Issue2833.err
Issue2833.agda:11.1-13.2: error: [SplitError.CosplitCatchall]
Cannot split into projections because not all clauses have a
projection copattern
when checking the definition of h
